# scada

./: .gitignore  CMakeLists.txt  README.md  main.bat
docs/: PL_diagram_klas.docx  PL_raport_wykonania_projektu.docx  PL_wstepna_analiza_funkcjonalna.docx  PL_wstepna_analiza_funkcjonalna_diagram_klas.docx  TODO.docx
scada/: CMakeLists.txt  dataclient.cpp  dataclient.h  dataprocessor.h  filteraverage.cpp  filteraverage.h  filtermedian.cpp  filtermedian.h  filtersmooth.cpp  filtersmooth.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/: CMakeLists.txt  test_server.cpp  test_server.h
